updated uv to add jupyter lab

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "plotly",
     "jupyter",
     "scikit-learn",
+    "jupyterlab>=4.4.5",
+    "pyarrow>=21.0.0",
 ]
 
 [tool.uv]
