Updated Test Animations Script

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,14 @@ dependencies = [
     "pyarrow>=21.0.0",
 ]
 
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["utility*"]
+
 [tool.uv]
 
 [dependency-groups]
