--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "scikit-learn",
     "jupyterlab>=4.4.5",
     "pyarrow>=21.0.0",
+    "databricks-sql-connector>=4.0.5",
 ]
 
 [tool.uv]
