--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "jupyterlab>=4.4.5",
     "pyarrow>=21.0.0",
     "databricks-sql-connector>=4.0.5",
+    "streamlit>=1.49.1",
 ]
 
 [build-system]
